feat: authentication completed